Strawberry/generated/StrawberryParser.cpp

// Generated from C:/Users/Patrick/Documents/Code/StrawberryParent/Strawberry/StrawberryParser.g4 by ANTLR 4.12.0


#include "StrawberryParserListener.h"
#include "StrawberryParserVisitor.h"

#include "StrawberryParser.h"


using namespace antlrcpp;
using namespace antlrcpptest;

using namespace antlr4;

namespace {

struct StrawberryParserStaticData final {
  StrawberryParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  StrawberryParserStaticData(const StrawberryParserStaticData&) = delete;
  StrawberryParserStaticData(StrawberryParserStaticData&&) = delete;
  StrawberryParserStaticData& operator=(const StrawberryParserStaticData&) = delete;
  StrawberryParserStaticData& operator=(StrawberryParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag strawberryparserParserOnceFlag;
StrawberryParserStaticData *strawberryparserParserStaticData = nullptr;

void strawberryparserParserInitialize() {
  assert(strawberryparserParserStaticData == nullptr);
  auto staticData = std::make_unique<StrawberryParserStaticData>(
    std::vector<std::string>{
      "script", "declaration", "action", "scope", "statement", "keywordStatement", 
      "body", "controlFlow", "loop", "loopScope", "loopBody", "compoundStatement", 
      "compoundAction", "ifStatement", "ifScope", "ifBody", "conditionalKeywords", 
      "loopKeywords", "fnDeclaration", "lambda", "parameters", "args", "argument", 
      "matchRegex", "matchOptions", "matchContent", "matchChars", "value", 
      "expression", "literal", "stringContent", "assign", "identifyer", 
      "looseFnCall", "prefix", "highPrioritySuffix", "op1", "op2", "op3", 
      "op4", "op5", "op6", "lowPrioritySuffix"
    },
    std::vector<std::string>{
      "", "'fn'", "'let'", "'if'", "'unless'", "'else'", "'while'", "'until'", 
      "'for'", "'return'", "'break'", "'next'", "'last'", "'once'", "'~>'", 
      "'\\w'", "'\\d'", "'\\s'", "'\\n'", "'\\/'", "'return all'", "", "", 
      "", "", "", "", "", "", "", "", "'true'", "'false'", "'null'", "'\\\\'", 
      "'->'", "'=>'", "'>>'", "'<<'", "'..'", "'...'", "'as'", "'+='", "'-='", 
      "'*='", "'/='", "'%='", "'^='", "'++'", "'--'", "'['", "']'", "'{'", 
      "'}'", "'('", "')'", "'^'", "'*'", "'/'", "'%'", "'+'", "'-'", "'='", 
      "'=='", "'!='", "'>'", "'>='", "'<'", "'<='", "'&&'", "'||'", "'_'", 
      "'&'", "'$'", "'\\$'", "'#'", "'@'", "'!'", "'\\u003F'", "':'", "';'", 
      "'\\'", "'|'", "'\"'", "'''", "','", "'.'", "'~'", "'`'"
    },
    std::vector<std::string>{
      "", "Fn", "Decl", "If", "Unless", "Else", "While", "Until", "For", 
      "Return", "Break", "Next", "Last", "Once", "MatchArrow", "RegWord", 
      "RegDigit", "RegSpace", "RegNewline", "RegFSlash", "RegReturnAll", 
      "Id", "DefId", "Number", "String", "StringLit", "Digit", "Word", "Letter", 
      "UcLetter", "LcLetter", "True", "False", "Null", "DefOr", "Sarrow", 
      "Darrow", "LRarrow", "RLarrow", "Dot2", "Dot3", "As", "PlusEq", "MinEq", 
      "MultEq", "DivEq", "ModEq", "PowEq", "Increm", "Decrem", "Lbrack", 
      "Rbrack", "Lbrace", "Rbrace", "Lpar", "Rpar", "Pow", "Star", "Bslash", 
      "Mod", "Plus", "Min", "Eq", "BoolEq", "BoolNeq", "Gt", "GtEq", "Lt", 
      "LtEq", "And", "Or", "Uscore", "AndSign", "Doll", "DollLit", "Hash", 
      "At", "ExPoint", "Qmark", "Colon", "Semi", "Fslash", "Bar", "Dquote", 
      "Squote", "Com", "Dot", "Squig", "Btick", "Ignore", "WS", "RETURN"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  strawberryparserParserStaticData = staticData.release();
}

}

StrawberryParser::StrawberryParser(TokenStream *input) : StrawberryParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

StrawberryParser::StrawberryParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  StrawberryParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *strawberryparserParserStaticData->atn, strawberryparserParserStaticData->decisionToDFA, strawberryparserParserStaticData->sharedContextCache, options);
}

StrawberryParser::~StrawberryParser() {
  delete _interpreter;
}

const atn::ATN& StrawberryParser::getATN() const {
  return *strawberryparserParserStaticData->atn;
}

std::string StrawberryParser::getGrammarFileName() const {
  return "StrawberryParser.g4";
}

const std::vector<std::string>& StrawberryParser::getRuleNames() const {
  return strawberryparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& StrawberryParser::getVocabulary() const {
  return strawberryparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView StrawberryParser::getSerializedATN() const {
  return strawberryparserParserStaticData->serializedATN;
}


//----------------- ScriptContext ------------------------------------------------------------------

StrawberryParser::ScriptContext::ScriptContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* StrawberryParser::ScriptContext::EOF() {
  return getToken(StrawberryParser::EOF, 0);
}

std::vector<StrawberryParser::ActionContext *> StrawberryParser::ScriptContext::action() {
  return getRuleContexts<StrawberryParser::ActionContext>();
}

StrawberryParser::ActionContext* StrawberryParser::ScriptContext::action(size_t i) {
  return getRuleContext<StrawberryParser::ActionContext>(i);
}


size_t StrawberryParser::ScriptContext::getRuleIndex() const {
  return StrawberryParser::RuleScript;
}

void StrawberryParser::ScriptContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StrawberryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterScript(this);
}

void StrawberryParser::ScriptContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StrawberryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitScript(this);
}


std::any StrawberryParser::ScriptContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StrawberryParserVisitor*>(visitor))
    return parserVisitor->visitScript(this);
  else
    return visitor->visitChildren(this);
}

StrawberryParser::ScriptContext* StrawberryParser::script() {
  ScriptContext *_localctx = _tracker.createInstance<ScriptContext>(_ctx, getState());
  enterRule(_localctx, 0, StrawberryParser::RuleScript);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(86);
      action();
      setState(89); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 6942294427559804894) != 0) || ((((_la - 77) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 77)) & 1233) != 0));
    setState(91);
    match(StrawberryParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

StrawberryParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

StrawberryParser::FnDeclarationContext* StrawberryParser::DeclarationContext::fnDeclaration() {
  return getRuleContext<StrawberryParser::FnDeclarationContext>(0);
}


size_t StrawberryParser::DeclarationContext::getRuleIndex() const {
  return StrawberryParser::RuleDeclaration;
}

void StrawberryParser::DeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StrawberryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclaration(this);
}

void StrawberryParser::DeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StrawberryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclaration(this);
}


std::any StrawberryParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StrawberryParserVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

StrawberryParser::DeclarationContext* StrawberryParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, StrawberryParser::RuleDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93);
    fnDeclaration();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ActionContext ------------------------------------------------------------------

StrawberryParser::ActionContext::ActionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

StrawberryParser::StatementContext* StrawberryParser::ActionContext::statement() {
  return getRuleContext<StrawberryParser::StatementContext>(0);
}

tree::TerminalNode* StrawberryParser::ActionContext::Semi() {
  return getToken(StrawberryParser::Semi, 0);
}

StrawberryParser::ScopeContext* StrawberryParser::ActionContext::scope() {
  return getRuleContext<StrawberryParser::ScopeContext>(0);
}

StrawberryParser::ControlFlowContext* StrawberryParser::ActionContext::controlFlow() {
  return getRuleContext<StrawberryParser::ControlFlowContext>(0);
}

StrawberryParser::DeclarationContext* StrawberryParser::ActionContext::declaration() {
  return getRuleContext<StrawberryParser::DeclarationContext>(0);
}


size_t StrawberryParser::ActionContext::getRuleIndex() const {
  return StrawberryParser::RuleAction;
}

void StrawberryParser::ActionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StrawberryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAction(this);
}

void StrawberryParser::ActionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StrawberryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAction(this);
}


std::any StrawberryParser::ActionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StrawberryParserVisitor*>(visitor))
    return parserVisitor->visitAction(this);
  else
    return visitor->visitChildren(this);
}

StrawberryParser::ActionContext* StrawberryParser::action() {
  ActionContext *_localctx = _tracker.createInstance<ActionContext>(_ctx, getState());
  enterRule(_localctx, 4, StrawberryParser::RuleAction);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(101);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(95);
      statement();
      setState(96);
      match(StrawberryParser::Semi);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(98);
      scope();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(99);
      controlFlow();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(100);
      declaration();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ScopeContext ------------------------------------------------------------------

StrawberryParser::ScopeContext::ScopeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* StrawberryParser::ScopeContext::Lbrace() {
  return getToken(StrawberryParser::Lbrace, 0);
}

tree::TerminalNode* StrawberryParser::ScopeContext::Rbrace() {
  return getToken(StrawberryParser::Rbrace, 0);
}

std::vector<StrawberryParser::ActionContext *> StrawberryParser::ScopeContext::action() {
  return getRuleContexts<StrawberryParser::ActionContext>();
}

StrawberryParser::ActionContext* StrawberryParser::ScopeContext::action(size_t i) {
  return getRuleContext<StrawberryParser::ActionContext>(i);
}


size_t StrawberryParser::ScopeContext::getRuleIndex() const {
  return StrawberryParser::RuleScope;
}

void StrawberryParser::ScopeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StrawberryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterScope(this);
}

void StrawberryParser::ScopeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StrawberryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitScope(this);
}


std::any StrawberryParser::ScopeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StrawberryParserVisitor*>(visitor))
    return parserVisitor->visitScope(this);
  else
    return visitor->visitChildren(this);
}

StrawberryParser::ScopeContext* StrawberryParser::scope() {
  ScopeContext *_localctx = _tracker.createInstance<ScopeContext>(_ctx, getState());
  enterRule(_localctx, 6, StrawberryParser::RuleScope);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(103);
    match(StrawberryParser::Lbrace);
    setState(107);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 6942294427559804894) != 0) || ((((_la - 77) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 77)) & 1233) != 0)) {
      setState(104);
      action();
      setState(109);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(110);
    match(StrawberryParser::Rbrace);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

StrawberryParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

StrawberryParser::ValueContext* StrawberryParser::StatementContext::value() {
  return getRuleContext<StrawberryParser::ValueContext>(0);
}

StrawberryParser::ScopeContext* StrawberryParser::StatementContext::scope() {
  return getRuleContext<StrawberryParser::ScopeContext>(0);
}

StrawberryParser::KeywordStatementContext* StrawberryParser::StatementContext::keywordStatement() {
  return getRuleContext<StrawberryParser::KeywordStatementContext>(0);
}


size_t StrawberryParser::StatementContext::getRuleIndex() const {
  return StrawberryParser::RuleStatement;
}

void StrawberryParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StrawberryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void StrawberryParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StrawberryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any StrawberryParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StrawberryParserVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

StrawberryParser::StatementContext* StrawberryParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 8, StrawberryParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(115);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case StrawberryParser::Decl:
      case StrawberryParser::Id:
      case StrawberryParser::DefId:
      case StrawberryParser::Number:
      case StrawberryParser::PlusEq:
      case StrawberryParser::MinEq:
      case StrawberryParser::MultEq:
      case StrawberryParser::DivEq:
      case StrawberryParser::ModEq:
      case StrawberryParser::PowEq:
      case StrawberryParser::Increm:
      case StrawberryParser::Decrem:
      case StrawberryParser::Lbrack:
      case StrawberryParser::Lpar:
      case StrawberryParser::Min:
      case StrawberryParser::Eq:
      case StrawberryParser::ExPoint:
      case StrawberryParser::Fslash:
      case StrawberryParser::Dquote:
      case StrawberryParser::Squote:
      case StrawberryParser::Squig: {
        enterOuterAlt(_localctx, 1);
        setState(112);
        value();
        break;
      }

      case StrawberryParser::Lbrace: {
        enterOuterAlt(_localctx, 2);
        setState(113);
        scope();
        break;
      }

      case StrawberryParser::Return:
      case StrawberryParser::Break:
      case StrawberryParser::Next:
      case StrawberryParser::Last:
      case StrawberryParser::Once: {
        enterOuterAlt(_localctx, 3);
        setState(114);
        keywordStatement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- KeywordStatementContext ------------------------------------------------------------------

StrawberryParser::KeywordStatementContext::KeywordStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t StrawberryParser::KeywordStatementContext::getRuleIndex() const {
  return StrawberryParser::RuleKeywordStatement;
}

void StrawberryParser::KeywordStatementContext::copyFrom(KeywordStatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- NextStatContext ------------------------------------------------------------------

tree::TerminalNode* StrawberryParser::NextStatContext::Next() {
  return getToken(StrawberryParser::Next, 0);
}

StrawberryParser::ExpressionContext* StrawberryParser::NextStatContext::expression() {
  return getRuleContext<StrawberryParser::ExpressionContext>(0);
}

StrawberryParser::NextStatContext::NextStatContext(KeywordStatementContext *ctx) { copyFrom(ctx); }

void StrawberryParser::NextStatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StrawberryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNextStat(this);
}
void StrawberryParser::NextStatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StrawberryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNextStat(this);
}

std::any StrawberryParser::NextStatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StrawberryParserVisitor*>(visitor))
    return parserVisitor->visitNextStat(this);
  else
    return visitor->visitChildren(this);
}
//----------------- OnceStatContext ------------------------------------------------------------------

tree::TerminalNode* StrawberryParser::OnceStatContext::Once() {
  return getToken(StrawberryParser::Once, 0);
}

StrawberryParser::StatementContext* StrawberryParser::OnceStatContext::statement() {
  return getRuleContext<StrawberryParser::StatementContext>(0);
}

StrawberryParser::OnceStatContext::OnceStatContext(KeywordStatementContext *ctx) { copyFrom(ctx); }

void StrawberryParser::OnceStatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StrawberryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOnceStat(this);
}
void StrawberryParser::OnceStatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StrawberryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOnceStat(this);
}

std::any StrawberryParser::OnceStatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StrawberryParserVisitor*>(visitor))
    return parserVisitor->visitOnceStat(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ReturnStatContext ------------------------------------------------------------------

tree::TerminalNode* StrawberryParser::ReturnStatContext::Return() {
  return getToken(StrawberryParser::Return, 0);
}

StrawberryParser::ValueContext* StrawberryParser::ReturnStatContext::value() {
  return getRuleContext<StrawberryParser::ValueContext>(0);
}

StrawberryParser::ReturnStatContext::ReturnStatContext(KeywordStatementContext *ctx) { copyFrom(ctx); }

void StrawberryParser::ReturnStatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StrawberryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterReturnStat(this);
}
void StrawberryParser::ReturnStatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StrawberryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitReturnStat(this);
}

std::any StrawberryParser::ReturnStatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StrawberryParserVisitor*>(visitor))
    return parserVisitor->visitReturnStat(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LastStatContext ------------------------------------------------------------------

tree::TerminalNode* StrawberryParser::LastStatContext::Last() {
  return getToken(StrawberryParser::Last, 0);
}

StrawberryParser::LastStatContext::LastStatContext(KeywordStatementContext *ctx) { copyFrom(ctx); }

void StrawberryParser::LastStatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StrawberryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLastStat(this);
}
void StrawberryParser::LastStatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StrawberryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLastStat(this);
}

std::any StrawberryParser::LastStatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StrawberryParserVisitor*>(visitor))
    return parserVisitor->visitLastStat(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BreakStatContext ------------------------------------------------------------------

tree::TerminalNode* StrawberryParser::BreakStatContext::Break() {
  return getToken(StrawberryParser::Break, 0);
}

StrawberryParser::BreakStatContext::BreakStatContext(KeywordStatementContext *ctx) { copyFrom(ctx); }

void StrawberryParser::BreakStatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StrawberryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBreakStat(this);
}
void StrawberryParser::BreakStatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StrawberryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBreakStat(this);
}

std::any StrawberryParser::BreakStatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StrawberryParserVisitor*>(visitor))
    return parserVisitor->visitBreakStat(this);
  else
    return visitor->visitChildren(this);
}
StrawberryParser::KeywordStatementContext* StrawberryParser::keywordStatement() {
  KeywordStatementContext *_localctx = _tracker.createInstance<KeywordStatementContext>(_ctx, getState());
  enterRule(_localctx, 10, StrawberryParser::RuleKeywordStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(129);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case StrawberryParser::Return: {
        _localctx = _tracker.createInstance<StrawberryParser::ReturnStatContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(117);
        match(StrawberryParser::Return);
        setState(119);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
        case 1: {
          setState(118);
          value();
          break;
        }

        default:
          break;
        }
        break;
      }
